--- a/static/css/index_sp.css
+++ b/static/css/index_sp.css
@@ -1520,9 +1520,13 @@ a:hover {
   margin: 0 10px;
 }
 
+.stream-content span {
+  font-size: 13px;
+}
+/* 
 .stream-content {
     display: none;
-}
+} */
 
 .stream-header {
   display: inline-block;
@@ -2467,7 +2471,6 @@ label.license_year {
   padding: 50px 5px;
   border-radius: 50px;
   margin: auto;
-  height: 300px;
 }
 
 .users_profile div {
@@ -2969,4 +2972,111 @@ button.stripe-button-el>span:hover {
   right: 0!important;
   position: absolute!important;
   top: 70px!important;
+}
+
+
+.switch__label {
+  width: 80px;
+  margin:0;
+	position: relative;
+	display: inline-block;
+}
+.switch__content {
+	display: block;
+  cursor: pointer;
+  position: relative;
+  border-radius: 30px;
+  height: 31px;
+overflow: hidden;
+}
+.switch__content:before {
+	content: "";
+	display: block;
+	position: absolute;
+	width: calc(100% - 3px);
+	height: calc(100% - 3px);
+	top: 0;
+	left: 0;
+	border: 1.5px solid #E5E5EA;
+	border-radius: 30px;
+	background-color: #fff;
+}
+.switch__content:after {
+	content: "";
+	display: block;
+	position: absolute;
+	background-color: transparent;
+	width: 0;
+	height: 0;
+	top: 50%;
+	left: 50%;
+	border-radius: 30px;
+	-webkit-transition: all .5s;
+	   -moz-transition: all .5s;
+	    -ms-transition: all .5s;
+	     -o-transition: all .5s;
+	        transition: all .5s;
+}
+.switch__input {
+	display: none;
+}
+ 
+.switch__circle {
+	display: block;
+	top: 1px;
+	left: 2px;
+	position: absolute;
+	-webkit-box-shadow: 0 2px 6px #999;
+	        box-shadow: 0 2px 6px #999;
+	width: 27px;
+	height: 27px;
+	-webkit-border-radius: 20px;
+	        border-radius: 20px;
+	background-color: #fff;
+	-webkit-transition: all .5s;
+	   -moz-transition: all .5s;
+	    -ms-transition: all .5s;
+	     -o-transition: all .5s;
+	        transition: all .5s;
+}
+
+.switch__input:checked ~ .switch__circle {
+	left: 50px;
+}
+ 
+.switch__input:checked ~ .switch__content:after {
+	background-color: #4BD964;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.switch-button {
+  display: flex;
+  justify-content: center;
+}
+
+span.get_info {
+  display: none;
+  line-height: 3.0em;
+  margin-right: 30px;
+}
+
+span.get_not_info {
+  line-height: 3.0em;
+  margin-right: 20px;
+  display: block;
+}
+
+.switch {
+  padding: 10px;
+}
+
+.checkbox_switch {
+  display: none ;
+}
+
+.checkbox_switch_hidden{
+  display: block;
 }
